Closed Bug 827267 Opened 11 years ago Closed 11 years ago

[Bluetooth] Wrong satus of Bluetooth icon on system tray

Categories

(Core :: DOM: Device Interfaces, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21
blocking-basecamp -
Tracking Status
firefox20 --- wontfix
firefox21 --- fixed
b2g18 + fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix

People

(Reporter: echou, Assigned: echou)

Details

Attachments

(1 file)

After the first time transferring a file via Bluetooth, the Bluetooth icon would become bright, but it would not become dark after the transferring was done. Moreover, even if we turn off Bluetooth and turn on again, the icon would be still bright.

It's better solving this problem in Gecko instead of Gaia. I'll take this.
Assignee: nobody → echou
Nominate as a bb+ since the UI couldn't be recovered once it occurs.
blocking-basecamp: --- → ?
Summary: [Bluetooth] Wrong satus of Bluetooth icon on system tray → [Bluetooth] Wrong status of Bluetooth icon on system tray
blocking-basecamp: ? → -
tracking-b2g18: --- → +
Summary: [Bluetooth] Wrong status of Bluetooth icon on system tray → [Bluetooth] Wrong satus of Bluetooth icon on system tray
* Added function IsTransferring(). This function could let Gaia know if there is an ongoing file-transfer session.
Attachment #698729 - Flags: review?(gyeh)
Comment on attachment 698729 [details] [diff] [review]
patch 1: v1: added a function for Gaia to distinguish if there's an ongoing transferring session

Review of attachment 698729 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good, r=me.
Attachment #698729 - Flags: review?(gyeh) → review+
https://hg.mozilla.org/mozilla-central/rev/204aa94ab033
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: