Bug 827267 - Added function IsTransferring() to distinguish if there is an ongoing file-transferring session, r=gyeh